Fix bug: display name input box width on iPhone

--- a/client/src/styles/components/_welcome-message.scss
+++ b/client/src/styles/components/_welcome-message.scss
@@ -41,7 +41,8 @@
   line-height: 1.28;
 }
 
-.username-form {
+.username-form,
+.hidden-span {
   display: flex;
   color: $username;
   background-color: transparent;
@@ -82,6 +83,11 @@
   }
 }
 
+.hidden-span {
+  position: absolute;
+  visibility: hidden;
+}
+
 .display-name-tooltip {
   position: relative;
   z-index: 1;
@@ -94,14 +100,4 @@
 
     padding-block: 0.5rem;
   }
-}
-
-.hidden-span {
-  position: absolute;
-  visibility: hidden;
-  overflow: hidden;
-  white-space: nowrap;
-  font-family: "Lobster";
-  font-size: 3.5rem;
-  max-width: 85vw;
 }
